# ai-gateway

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/ai_gateway/: __init__.py  errors.py  gateway.py
src/clients/: openai_client.py
src/config/: settings.py
src/examples/: failure_path_invocation.py  simple_invocation.py
src/observability/: __init__.py  logger.py  metrics.py
src/prompts/: __init__.py  base_prompt.py  templates.py
src/routing/: __init__.py  model_router.py
tests/: test_gateway.py  test_model_router.py  test_observability_contract.py  test_openai_client_contract.py  test_prompt_templates.py
